# anticheat

./: .clang-format  CMakeLists.txt  README.md  main.cpp  mingw-toolchain.cmake
loader/: loader.cpp  shared_ctx.hpp
src/: global.hpp  imports.hpp  main.cpp  main_class.cpp  main_class.hpp  start.cpp  str_encrypt.hpp  vac_ctx.cpp  vac_ctx.hpp
src/detections/: detections.cpp  detections.hpp  developer_tools.cpp  memory_scan.cpp  module_validation.cpp  present_hook.cpp  present_hook.hpp  process_validation.cpp  window_validation.cpp
src/loader/: loader.cpp  loader.hpp
src/utils/: file.cpp  file.hpp  module.cpp  module.hpp  process.cpp  process.hpp  registry.cpp  registry.hpp  screenshot.cpp  screenshot.hpp  str_encrypt.hpp  string.cpp  string.hpp  window.cpp  window.hpp
